# time-addressable-media-store

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  alternative-storage.yaml  architecture.drawio  pyproject.toml  pytest.ini  requirements.txt  storage_backend.yaml  template.yaml  test.py
.github/workflows/: automate-release.yaml  validate-release.yaml
api/: Makefile  build_params.py  constants.py  openapi.yaml  requirements.txt  utils.py
docs/: LOCAL_DEVELOPMENT.md
functions/api_flow_delete_requests/: app.py
functions/api_flow_segments/: app.py
functions/api_flows/: app.py
functions/api_objects/: app.py
functions/api_service/: app.py
functions/api_sources/: app.py
functions/cognito_utils/: app.py
functions/cr_storage_backend/: app.py
functions/custom_resource/: app.py
functions/lambda_authorizer/: app.py  oauth_scopes.json  requirements.txt
functions/object_duplication/: app.py
functions/sqs_delete_requests/: app.py
functions/sqs_object_cleanup/: app.py
functions/webhooks/: app.py
functions/webhooks_delivery/: app.py
functions/webhooks_error/: app.py
layers/api/: params.py
layers/utils/: constants.py  dynamodb.py  neptune.py  params.py  requirements.txt  schema.py  schema_extra.py  segment_get_urls.py  utils.py
templates/: cognito.yaml  neptune.yaml  vpc.yaml  waf.yaml
tests/acceptance/: conftest.py  constants.py  list_actual.py  pytest_expected_names.txt  test_01_service.py  test_02_flows.py  test_03_sources.py  test_04_segments.py  test_05_delete-requests.py  test_06_webhook_delivery.py  test_99_denied.py  webhook-api-gateway.yaml  webhook_helpers.py
tests/functional/: conftest.py
tests/functional/functions/: test_api_flows.py  test_api_objects.py  test_api_service.py  test_lambda_authorizer.py  test_webhooks.py  test_webhooks_delivery.py
tests/unit/: conftest.py
tests/unit/functions/: test_api_objects_app.py  test_webhooks.py
tests/unit/functions/webhooks/: conftest.py  test_app.py
tests/unit/layers/utils/: test_dynamodb.py  test_utils.py
upgrades/2.1_3.0/: tams-2.1-3.0-upgrade-template.yaml
upgrades/4.0/: alternative-bucket.yaml
upgrades/4.1_5.0/: README.md  tams-4.1-5.0-upgrade-template.yaml
upgrades/5.0.x_6.0/: README.md
