# FILE: pyproject.toml
[tool.bandit]
exclude_dirs = ["tests"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
requests = "^2.32.5"
pytest = "^9.0.2"
boto3 = "^1.42.69"
pyaml = "^26.2.1"
aws-lambda-powertools = "^3.25.0"
pydantic = "^2.12.5"
aws-xray-sdk = "^2.15.0"
undecorated = "^0.3.0"
deepdiff = "^8.6.2"
mediatimestamp = "^5.2.0"
cymple = "^0.12.0"
moto = "^5.1.22"
datamodel-code-generator = "^0.55.0"
pytest-lazy-fixtures = "^1.4.0"
pyjwt = "^2.12.1"

[project]
name = "time-addressable-media-store"
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
